--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "start":  "php artisan serve",
+        "clear-routes": "php artisan route:clear && php artisan route:cache"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
